# Hex-Casting-1.21.1-Addon-Template

./: .copier-answers.hexdoc-hexcasting.yml  .gitignore  LICENSE  README.md  build.gradle.kts  copier.yml  ctt.toml  gradle.properties  libs.versions.toml  pyproject.toml  settings.gradle.kts  shell.nix
.github/workflows/: build_docs.yml
doc/: README.md  hexdoc.toml
doc/resources/assets/hextemplate/lang/: en_us.flatten.json5
doc/src/hexdoc_hextemplate/: __gradle_version__.py  _hooks.py
docs/: index.html
docs/meta/: sitemap-minecraft.json  sitemap.json
docs/v/latest/example/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/latest/example/en_us/basics/: index.html
docs/v/latest/example/en_us/casting/: index.html
docs/v/latest/example/en_us/greatwork/: index.html
docs/v/latest/example/en_us/interop/: index.html
docs/v/latest/example/en_us/items/: index.html
docs/v/latest/example/en_us/lore/: index.html
docs/v/latest/example/en_us/patterns/: index.html
docs/v/latest/example/en_us/patterns/great_spells/: index.html
docs/v/latest/example/en_us/patterns/spells/: index.html
libs/: README.md
macros/: github.jinja
src/common/: hextemplate.mixins.json
src/common/main/kotlin/com/example/hextemplate/: HexTemplate.kt  HexTemplateAbstractions.kt
src/common/main/resources/assets/hextemplate/lang/: en_us.yml
src/fabric/1.21.1/: hextemplate-fabric.mixins.json
src/neoforge/1.21.1/: hextemplate-neoforge.mixins.json
template/: build.gradle.kts.jinja  gradle.properties.jinja  pyproject.toml.jinja  {% if mit_license %}LICENSE{% endif %}.jinja  {% if nix_shell %}shell.nix{% endif %}.jinja
template/.github/workflows/: build_docs.yml.jinja
template/doc/: README.md.jinja  hexdoc.toml.jinja
template/doc/resources/assets/{{ modid }}/lang/: en_us.flatten.json5.jinja
template/doc/src/hexdoc_{{ modid }}/: _hooks.py.jinja
template/src/common/: {{ modid }}.mixins.json.jinja
template/src/common/main/java/{{ package_path }}/mixin/: ExampleMixin.java.jinja
template/src/common/main/kotlin/{{ package_path }}/: {{ classname }}.kt.jinja  {{ classname }}Abstractions.kt.jinja
template/src/common/main/kotlin/{{ package_path }}/client/: {{ classname }}Client.kt.jinja
template/src/common/main/kotlin/{{ package_path }}/config/: {{ classname }}ClientConfig.kt.jinja  {{ classname }}CommonConfig.kt.jinja  {{ classname }}Configs.kt.jinja
template/src/common/main/kotlin/{{ package_path }}/datagen/: {{ classname }}ActionTags.kt.jinja
template/src/common/main/kotlin/{{ package_path }}/networking/: HexTemplateNetworking.kt.jinja
template/src/common/main/kotlin/{{ package_path }}/registry/: {{ classname }}Actions.kt.jinja  (+1 more)
template/src/fabric/1.21.1/: {{ modid }}-fabric.mixins.json.jinja
template/src/neoforge/1.21.1/: {{ modid }}-neoforge.mixins.json.jinja
(+83 files in other folders)
