[build-system]
requires = [
    "hatchling",
    "hatch-gradle-version>=0.9.8",
]
build-backend = "hatchling.build"

# project metadata

[project]
name = "hexdoc-hextemplate"
description = "Hex Template addon for Hex Casting."
readme = "doc/README.md"
authors = [
    { name="Example" },
]
keywords = ["hexdoc"]
requires-python = ">=3.12"
dynamic = ["version", "optional-dependencies"]
dependencies = [
    "hexdoc-hexcasting~=0.11.3.1.0",
]

[project.urls]
Homepage = "https://example.github.io/hextemplate"
Source = "https://github.com/Example/hextemplate"

# project version

[tool.hatch.version]
scheme = "gradle"
source = "gradle-properties"
py-path = "doc/src/hexdoc_hextemplate/__version__.py"
key = "modVersion"

# Python dependencies

# required
#[tool.hatch.metadata.hooks.version-catalog]
#path = "libs.versions.toml"
#dependencies = [
#    { package="hexdoc-hexcasting", op="~=", py-version="1.0", key="hexcasting" },
#]

# dev-only
[dependency-groups]
dev = [
    "ruff",
]

# directory inclusion

[tool.hatch.build]
only-include = [
    "doc/src/hexdoc_hextemplate",
    "gradle.properties",
]
artifacts = [
    "/doc/src/hexdoc_hextemplate/_export/generated",
    "/doc/src/hexdoc_hextemplate/__gradle_version__.py",
]

[tool.hatch.build.targets.wheel]
sources = ["doc/src"]

# hexdoc entry points

[project.entry-points.hexdoc]
hextemplate = "hexdoc_hextemplate._hooks:HextemplatePlugin"

# linting

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"

include = ["doc/src"]
extraPaths = ["doc/src"]

typeCheckingMode = "standard"

strictDictionaryInference = true
strictListInference = true
strictSetInference = true

reportConstantRedefinition = "error"
reportIncompleteStub = "error"
reportInconsistentConstructor = "error"
reportInvalidStubStatement = "error"

reportDeprecated = "warning"
reportDuplicateImport = "warning"
reportMatchNotExhaustive = "warning"
reportMissingParameterType = "warning"
reportMissingTypeArgument = "warning"
reportMissingTypeStubs = "warning"
reportPrivateUsage = "warning"
reportTypeCommentUsage = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownMemberType = "warning"
reportUnknownParameterType = "warning"
reportUnknownVariableType = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnnecessaryIsInstance = "warning"
reportUntypedBaseClass = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedNamedTuple = "warning"
reportUnusedClass = "warning"
reportUnusedExpression = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"